--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
+    "flag-icon-css": "^2.3.0",
     "history": "2.1.1",
     "html-webpack-plugin": "2.17.0",
     "json-loader": "0.5.4",
