--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ stages:
   - name: deploy
     if: branch = master
   - name: deploy-canary
-    if: branch = develop
-
+    if: $TRAVIS_PULL_REQUEST == “false” && $TRAVIS_BRANCH == develop
 
 before_install:
   - PACKAGE_VERSION=$(node -p -e "require('./package.json').version")
