--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ stages:
   - name: deploy
     if: branch = master
   - name: deploy-canary
-    if: env(TRAVIS_BRANCH) = develop AND env(TRAVIS_PULL_REQUEST) = false
+    if: env(TRAVIS_BRANCH) = develop_test AND env(TRAVIS_PULL_REQUEST) = false
 
 before_install:
   - PACKAGE_VERSION=$(node -p -e "require('./package.json').version")
