--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ stages:
   - name: deploy
     if: branch = master
   - name: deploy-canary
-    if: branch = develop_test && type = pull_request
+    if: branch = develop_test && type != pull_request
 
 before_install:
   - PACKAGE_VERSION=$(node -p -e "require('./package.json').version")
