--- a/retro-board-maintenance/Makefile
+++ b/retro-board-maintenance/Makefile
@@ -6,3 +6,6 @@ publish:
 
 run:
 	docker run -p ${PORT}:80 antoinejaussoin/retro-board-maintenance:latest
+
+multiarch:
+	docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 -t antoinejaussoin/retro-board-maintenance:muli --push .
