--- a/retro-board-app/Dockerfile.build
+++ b/retro-board-app/Dockerfile.build
@@ -1,7 +1,7 @@
 # This must be run with the Docker context set to the root folder of the repository
 # (the one with the yarn.lock file)
 
-FROM --platform=amd64 node:12-alpine as Node
+FROM node:12-alpine as Node
 
 ENV NODE_ENV=production
 
@@ -27,15 +27,3 @@ COPY --chown=node:node ./retro-board-common ./retro-board-common
 
 RUN yarn build-ui
 
-FROM nginx:alpine
-
-ENV BACKEND_HOST=backend
-ENV BACKEND_PORT=3201
-
-COPY --from=Node /home/node/app/retro-board-app/build /usr/share/nginx/html
-COPY ./retro-board-app/docker/nginx.conf.template /etc/nginx/conf.d/default.conf.template
-COPY ./retro-board-app/docker/frontend-entrypoint.sh /
-
-RUN ["chmod", "+x", "/frontend-entrypoint.sh"]
-ENTRYPOINT ["/frontend-entrypoint.sh"]
-CMD ["nginx", "-g", "daemon off;"]
