--- a/retro-board-server/Dockerfile
+++ b/retro-board-server/Dockerfile
@@ -13,7 +13,7 @@ COPY ./yarn.lock ./
 COPY ./retro-board-server/package.json ./retro-board-server/
 COPY ./retro-board-common/package.json ./retro-board-common/
 
-RUN yarn install
+RUN yarn --network-timeout 1000000 install
 
 COPY ./retro-board-server ./retro-board-server
 COPY ./retro-board-common ./retro-board-common
