--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,14 @@ env:
   - NODE_ENV=production DOCKER_CLI_EXPERIMENTAL=enabled
 
 stages:
-  - test
+  - name: test
+    if: branch != multiarch
   - name: deploy
     if: branch = master && type != pull_request
   - name: deploy-canary
     if: branch = develop && type != pull_request
+  - name: deploy-multi
+    if: branch = multiarch && type != pull_request
 
 before_install:
   - PACKAGE_VERSION=$(node -p -e "require('./package.json').version")
@@ -44,8 +47,17 @@ jobs:
         - docker push antoinejaussoin/retro-board-maintenance:latest
     - stage: deploy-canary
       script:
-        - export TARGET_ARCHS=linux/amd64,linux/386,linux/arm64,linux/arm/v8,linux/arm/v7,linux/arm/v6
+        - export TARGET_ARCHS=linux/amd64,linux/arm/v7
         - export PACKAGE_VERSION=canary
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - make prepare
+        - make maintenance
+        - make frontend
+        - make backend
+    - stage: deploy-multi
+      script:
+        - export TARGET_ARCHS=linux/amd64,linux/arm/v7
+        - export PACKAGE_VERSION=multi
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - make prepare
         - make maintenance
