--- a/retro-board-server/package.json
+++ b/retro-board-server/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@sentry/node": "^5.25.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/connect-redis": "0.0.14",
     "@types/dotenv": "^8.2.0",
     "@types/express": "4.17.3",
@@ -29,6 +30,7 @@
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-redis": "1.0.26",
     "@types/uuid": "^8.3.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "connect-redis": "^5.0.0",
