--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [master, v4, v40/ironing]
+    branches: [develop]
   pull_request:
     branches: []
 
@@ -45,8 +45,8 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           file: retro-board-server/Dockerfile
           context: .
-          tags: antoinejaussoin/retro-board-backend:v4,antoinejaussoin/retro-board-backend:${{ steps.package.outputs.content }}
-          platforms: linux/amd64,linux/arm64
+          tags: antoinejaussoin/retro-board-backend:canary
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
 
       - name: Build and push Frontend
@@ -55,6 +55,16 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           file: retro-board-app/Dockerfile
           context: .
-          tags: antoinejaussoin/retro-board-frontend:v4,antoinejaussoin/retro-board-frontend:${{ steps.package.outputs.content }}
-          platforms: linux/amd64,linux/arm64
+          tags: antoinejaussoin/retro-board-frontend:canary
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: true
+
+      - name: Build and push Maintenance
+        uses: docker/build-push-action@v2
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          file: retro-board-maintenance/Dockerfile
+          context: retro-board-maintenance
+          tags: antoinejaussoin/retro-board-maintenance:canary
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
