--- a/retro-board-server/package.json
+++ b/retro-board-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "retro-board-server",
-  "version": "4.0.0-beta1",
+  "version": "4.0.0",
   "license": "GNU GPLv3",
   "private": true,
   "scripts": {
