--- a/retro-board-server/package.json
+++ b/retro-board-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "retro-board-server",
+  "name": "@retrospected/backend",
   "version": "4.0.0",
   "license": "GNU GPLv3",
   "private": true,
@@ -58,7 +58,7 @@
     "passport-twitter": "^1.0.4",
     "pg": "^8.4.1",
     "redis": "^3.0.2",
-    "retro-board-common": "*",
+    "@retrospected/common": "*",
     "rimraf": "^3.0.2",
     "shortid": "^2.2.15",
     "socket.io": "^2.3.0",
