--- a/retro-board-common/package.json
+++ b/retro-board-common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "retro-board-common",
+  "name": "@retrospected/common",
   "version": "4.0.0",
   "license": "GNU GPLv3",
   "private": true,
