--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "retro-board",
+  "name": "retrospected",
   "version": "4.0.0",
   "description": "An agile retrospective board - Powering www.retrospected.com",
   "private": true,
