--- a/retro-board-server/.eslintrc
+++ b/retro-board-server/.eslintrc
@@ -18,18 +18,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
+        "no-case-declarations":"off",
         "semi": [
             "error",
             "always"
