--- a/retro-board-server/.eslintrc
+++ b/retro-board-server/.eslintrc
@@ -20,6 +20,8 @@
     "rules": {
         "no-case-declarations":"off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
+        "@typescript-eslint/no-non-null-assertion":"off",
+        "@typescript-eslint/no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false, "argsIgnorePattern": "^_" }],
         "semi": [
             "error",
             "always"
