--- a/retro-board-server/package.json
+++ b/retro-board-server/package.json
@@ -9,7 +9,8 @@
     "create-migration": "ts-node ../node_modules/typeorm/cli.js migration:generate -n ",
     "migrate": "ts-node ./src/init.ts && ts-node ../node_modules/typeorm/cli.js migration:run",
     "revert": "ts-node ../node_modules/typeorm/cli.js migration:revert",
-    "lint": "eslint 'src/**/*.{ts,tsx}' --fix "
+    "lint": "eslint 'src/**/*.ts'",
+    "fix": "eslint 'src/**/*.ts' --fix"
   },
   "dependencies": {
     "@retrospected/common": "*",
