--- a/.env.example
+++ b/.env.example
@@ -18,11 +18,11 @@ GITHUB_KEY=
 GITHUB_SECRET=
 SLACK_KEY=
 SLACK_SECRET=
+BASE_URL=http://localhost:3000
 SENDGRID_API_KEY=
-SENDGRID_SENDER=accounts@retrospected.com
+SENDGRID_SENDER=
 STRIPE_SECRET=
 STRIPE_KEY=
-BASE_URL=http://localhost:3000
 STRIPE_WEBHOOK_SECRET=
 STRIPE_TEAM_PRODUCT=
 STRIPE_TEAM_PRICE=
