--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,8 @@ SLACK_KEY=
 SLACK_SECRET=
 SENDGRID_API_KEY=
 SENDGRID_SENDER=accounts@retrospected.com
+SENDGRID_VERIFICATION_EMAIL_TID=
+SENDGRID_RESET_PASSWORD_TID=
 STRIPE_SECRET=
 STRIPE_KEY=
 BASE_URL=http://localhost:3000
