--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -48,7 +48,7 @@ services:
       - redis
     environment:
       NODE_ENV: production
-      LICENCE_KEY: # This must be provided if you deploy Retrospected yourself
+      LICENCE_KEY: # This must be provided if you deploy Retrospected yourself. Contact support@retrospected.com.
       BASE_URL: http://localhost:80 # This must be the URL of the frontend app once deployed
       DB_TYPE: postgres
       DB_NAME: retroboard # Must be the same as POSTGRES_DB above
