Replace bcrypt by bcryptjs for better ARM compat

--- a/retro-board-server/package.json
+++ b/retro-board-server/package.json
@@ -16,7 +16,7 @@
     "@retrospected/common": "*",
     "@sendgrid/mail": "^7.4.0",
     "@sentry/node": "^5.28.0",
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "0.0.15",
     "@types/crypto-js": "^4.0.1",
     "@types/dotenv": "^8.2.0",
@@ -35,7 +35,9 @@
     "@types/shortid": "^0.0.29",
     "@types/socket.io-redis": "1.0.26",
     "@types/uuid": "^8.3.0",
-    "bcrypt": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "connect-redis": "5.0.0",
@@ -43,6 +45,7 @@
     "crypto-js": "^4.0.0",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
+    "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
@@ -70,10 +73,7 @@
     "stripe": "^8.126.0",
     "ts-node": "9.0.0",
     "typeorm": "^0.2.29",
-    "uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
-    "eslint": "^7.14.0"
+    "uuid": "^8.3.1"
   },
   "resolutions": {
     "@types/connect-redis": "0.0.15",
