Adding Microsoft OAuth

--- a/retro-board-server/package.json
+++ b/retro-board-server/package.json
@@ -30,6 +30,7 @@
     "@types/passport-github2": "^1.2.4",
     "@types/passport-google-oauth": "^1.0.41",
     "@types/passport-local": "^1.0.33",
+    "@types/passport-microsoft": "^0.0.0",
     "@types/passport-twitter": "^1.0.36",
     "@types/redis": "2.8.28",
     "@types/shortid": "^0.0.29",
@@ -62,6 +63,7 @@
     "passport-google-auth": "^1.0.2",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-microsoft": "^0.1.0",
     "passport-slack": "^0.0.7",
     "passport-twitter": "^1.0.4",
     "pg": "^8.5.1",
