--- a/retro-board-app/package.json
+++ b/retro-board-app/package.json
@@ -57,6 +57,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-social-login-buttons": "^3.1.2",
+    "recoil": "^0.1.2",
     "rimraf": "^3.0.2",
     "shortid": "^2.2.16",
     "socket.io-client": "^3.1.1",
