--- a/retro-board-app/package.json
+++ b/retro-board-app/package.json
@@ -28,13 +28,13 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/shortid": "^0.0.29",
     "@types/socket.io-client": "^1.4.35",
-    "@types/styled-components": "5.1.7",
+    "@types/styled-components": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "bowser": "^2.11.0",
     "core-js": "^3.8.3",
     "crypto-js": "^4.0.0",
     "date-fns": "^2.17.0",
-    "flag-icon-css": "3.5.0",
+    "flag-icon-css": "^3.5.0",
     "http-proxy-middleware": "^1.0.6",
     "isemail": "^3.2.0",
     "lexorank": "^1.0.4",
@@ -48,21 +48,21 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.0.3",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-giphy-searchbox": "^1.5.4",
     "react-helmet": "^6.1.0",
     "react-markdown": "^5.0.3",
     "react-password-strength-bar": "^0.3.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^4.0.2",
     "react-social-login-buttons": "^3.1.2",
     "recoil": "^0.1.2",
     "rimraf": "^3.0.2",
     "shortid": "^2.2.16",
     "socket.io-client": "^3.1.1",
-    "styled-components": "5.2.1",
-    "typescript": "4.1.5",
+    "styled-components": "^5.2.1",
+    "typescript": "^4.1.5",
     "uuid": "^8.3.2",
     "whatwg-fetch": "^3.5.0"
   },
