--- a/retro-board-server/package.json
+++ b/retro-board-server/package.json
@@ -22,7 +22,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "4.17.11",
     "@types/express-mung": "^0.5.2",
-    "@types/express-session": "1.17.3",
+    "@types/express-session": "^1.17.3",
     "@types/lodash": "^4.14.168",
     "@types/md5": "^2.3.0",
     "@types/node": "^14.14.27",
@@ -74,7 +74,7 @@
     "socket.io": "3.1.1",
     "socket.io-redis": "6.0.1",
     "stripe": "^8.135.0",
-    "ts-node": "9.1.1",
+    "ts-node": "^9.1.1",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
   },
