WS rate limiting

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,5 @@ STRIPE_UNLIMITED_PRICE=
 LICENCE_KEY=
 RATE_LIMIT_WINDOW=900000
 RATE_LIMIT_MAX=100
+RATE_LIMIT_WS_POINTS=10
+RATE_LIMIT_WS_DURATION=1
