--- a/retro-board-server/package.json
+++ b/retro-board-server/package.json
@@ -56,7 +56,7 @@
     "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
     "freemail": "^1.7.0",
-    "jest": "^26.6.3",
+    "jest": "26.6.0",
     "lexorank": "^1.0.4",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
