--- a/retro-board-server/tsconfig.json
+++ b/retro-board-server/tsconfig.json
@@ -22,7 +22,7 @@
     "sourceRoot": "/",
     "lib": ["es2015", "es2017", "dom"],
     "baseUrl": ".",
-    "types": ["jest"],
+    // "types": ["jest"],
     "typeRoots": ["./node_modules/@types", "./src/typings"]
   },
   "include": ["src", "./package.json"],
