--- a/retro-board-server/tsconfig.json
+++ b/retro-board-server/tsconfig.json
@@ -24,7 +24,7 @@
     "baseUrl": "."
   },
   "include": ["src", "./package.json"],
-
+  "exclude" : ["src/**/*.test.ts"], 
   "references": [{
     "path": "../retro-board-common"
   }]
