--- a/retro-board-app/package.json
+++ b/retro-board-app/package.json
@@ -10,6 +10,7 @@
     "@material-ui/styles": "^4.11.3",
     "@retrospected/common": "*",
     "@sentry/browser": "^6.2.3",
+    "@simbathesailor/use-what-changed": "^1.0.0",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
     "@testing-library/jest-dom": "^5.11.10",
