--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "lint": "cd frontend && yarn lint && cd ../backend && yarn lint",
     "clean": "del ./{frontend,backend,common,maintenance}/yarn.lock && del ./yarn.lock && del ./{frontend,backend,common,maintenance}/node_modules && del ./node_modules",
     "clean-install": "del ./{frontend,backend,common,maintenance}/node_modules && del ./node_modules && yarn",
-    "start-ui": "cd frontend && yarn start && cd ..",
-    "start-server": "yarn build-common && cd backend && yarn start && cd ..",
-    "start-server-production": "yarn migrate && cd ./backend/dist/src && node index.js",
+    "frontend": "cd frontend && yarn start && cd ..",
+    "backend": "yarn build-common && cd backend && yarn start && cd ..",
+    "backend-production": "yarn migrate && cd ./backend/dist/src && node index.js",
     "build-common": "cd common && yarn build && cd ..",
-    "build-ui": "yarn build-common && cd frontend && yarn build && cd ..",
-    "build-server": "cd backend && yarn build && cd ..",
-    "build": "yarn build-ui && yarn build-server",
-    "start": "yarn build-common && yarn start-server & yarn start-ui",
+    "build-frontend": "yarn build-common && cd frontend && yarn build && cd ..",
+    "build-backend": "cd backend && yarn build && cd ..",
+    "build": "yarn build-frontend && yarn build-backend",
+    "start": "yarn build-common && yarn backend & yarn frontend",
     "migrate": "cd backend && yarn migrate && cd ..",
     "stripe-listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook"
   },
