Allowing for self hosted payments

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -84,6 +84,7 @@ services:
       STRIPE_TEAM_PRICE: # Stripe product information
       STRIPE_UNLIMITED_PRODUCT: # Stripe product information
       STRIPE_UNLIMITED_PRICE: # Stripe product information
+      STRIPE_SELF_HOSTED_PRODUCT: # Stripe product information
       RATE_LIMIT_WINDOW: 10000 # Rate Limiting window size for expensive requests (in ms)
       RATE_LIMIT_MAX: 3 # Rate Limiting max requests per window
       RATE_LIMIT_WS_POINTS: 10 # Websocket rate limiting, max messages per duration
