--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,7 @@ STRIPE_TEAM_PRODUCT=
 STRIPE_TEAM_PRICE=
 STRIPE_UNLIMITED_PRODUCT=
 STRIPE_UNLIMITED_PRICE=
+STRIPE_SELF_HOSTED_PRODUCT=
 LICENCE_KEY=
 RATE_LIMIT_WINDOW=10000
 RATE_LIMIT_MAX=3
