--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ SENDGRID_API_KEY=
 SENDGRID_SENDER=
 SENDGRID_VERIFICATION_EMAIL_TID=
 SENDGRID_RESET_PASSWORD_TID=
+SENDGRID_SELF_HOST_EMAIL_TID=
 STRIPE_SECRET=
 STRIPE_KEY=
 STRIPE_WEBHOOK_SECRET=
