--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -78,6 +78,7 @@ services:
       SENDGRID_SENDER: # Email to be used as the sender for emails
       SENDGRID_VERIFICATION_EMAIL_TID: # Verification email template ID
       SENDGRID_RESET_PASSWORD_TID: # Reset password email template ID
+      SENDGRID_SELF_HOST_EMAIL_TID: # Self host welcome email template ID
       STRIPE_SECRET: # Stripe payment account secret
       STRIPE_WEBHOOK_SECRET: # Stripe webhook secret
       STRIPE_TEAM_PRODUCT: # Stripe product information
