--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,9 @@ STRIPE_TEAM_PRICE=
 STRIPE_UNLIMITED_PRODUCT=
 STRIPE_UNLIMITED_PRICE=
 STRIPE_SELF_HOSTED_PRODUCT=
+STRIPE_SELF_HOSTED_URL_GBP=
+STRIPE_SELF_HOSTED_URL_USD=
+STRIPE_SELF_HOSTED_URL_EUR=
 LICENCE_KEY=
 RATE_LIMIT_WINDOW=10000
 RATE_LIMIT_MAX=3
