--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 BACKEND_PORT=8081
 SQL_LOG=false
+SELF_HOSTED=false
 SENTRY_URL=
 SESSION_SECRET=changeme
 TWITTER_KEY=
