--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -49,6 +49,7 @@ services:
     environment:
       NODE_ENV: production
       LICENCE_KEY: # This must be provided if you deploy Retrospected yourself. Contact support@retrospected.com.
+      SELF_HOSTED: 'true' # This will make any account "Pro", but only works with a valid LICENCE_KEY
       BASE_URL: http://localhost:80 # This must be the URL of the frontend app once deployed
       DB_TYPE: postgres
       DB_NAME: retroboard # Must be the same as POSTGRES_DB above
