--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ REDIS_PORT=6379
 BACKEND_PORT=8081
 SQL_LOG=false
 SELF_HOSTED=false
+SELF_HOSTED_ADMIN=antoine@jaussoin.com
 SENTRY_URL=
 SESSION_SECRET=changeme
 TWITTER_KEY=
