--- a/self-hosting/docker-compose.yml
+++ b/self-hosting/docker-compose.yml
@@ -1,24 +1,17 @@
 version: '3'
 services:
-  redis:
-    image: redis:latest
-    depends_on:
-      - postgres
-    restart: unless-stopped
-    logging:
-      driver: 'json-file'
-      options:
-        max-size: '50m'
-
   postgres:
     image: postgres:11.6
     hostname: postgres
     environment:
-      POSTGRES_PASSWORD: {{dbPassword}} # Must be the same as DB_PASSWORD below
+      # Only change the Database password below BEFORE running for the first time. Once the database
+      # is initialised, you can't change the password anymore.
+      # This password has to be the same as the DB_PASSWORD in the "backend" section below.
+      POSTGRES_PASSWORD: {{dbPassword}}
       
       # -- Dot not modify --
-      POSTGRES_USER: postgres # Must be the same as DB_USER below
-      POSTGRES_DB: retroboard # Must be the same as DB_NAME below
+      POSTGRES_USER: postgres
+      POSTGRES_DB: retroboard
     volumes:
       - database:/var/lib/postgresql/data
     restart: unless-stopped
@@ -27,6 +20,22 @@ services:
       options:
         max-size: '50m'
 
+  backend:
+    image: antoinejaussoin/retro-board-backend:latest
+    depends_on:
+      - redis
+    environment:
+      LICENCE_KEY: {{key}} # Your personal licence key
+      SELF_HOSTED_ADMIN: '{{email}}' # This is the user who is going to be admin on the self-hosted Retrospected instance.
+      DB_PASSWORD: {{dbPassword}} # Must be the same as POSTGRES_PASSWORD above
+      SESSION_SECRET: {{sessionSecret}} # This can be anything. You don't have to change this.
+      
+    restart: unless-stopped
+    logging:
+      driver: 'json-file'
+      options:
+        max-size: '50m'
+  
   pgadmin:
     image: dpage/pgadmin4:4.15 # use biarms/pgadmin4 on ARM
     depends_on:
@@ -43,36 +52,29 @@ services:
       driver: 'json-file'
       options:
         max-size: '50m'
-
-  backend:
-    image: antoinejaussoin/retro-board-backend:latest
-    depends_on:
-      - redis
-    environment:
-      LICENCE_KEY: {{key}}
-      SELF_HOSTED: 'true'
-      SELF_HOSTED_ADMIN: '{{email}}'
-      DB_PASSWORD: {{dbPassword}} # Must be the same as POSTGRES_PASSWORD above
-      SESSION_SECRET: {{sessionSecret}} # This can be anything
       
-    restart: unless-stopped
-    logging:
-      driver: 'json-file'
-      options:
-        max-size: '50m'
-
   frontend:
     image: antoinejaussoin/retro-board-frontend:latest
     depends_on:
       - backend
     ports:
-      - '1800:80' # Change the first 80 to whatever port you want to access Retrospected from
+      - '1800:80' # Change 1800 to whatever port you want to access Retrospected from
     restart: unless-stopped
     logging:
       driver: 'json-file'
       options:
         max-size: '50m'
 
+  redis:
+    image: redis:latest
+    depends_on:
+      - postgres
+    restart: unless-stopped
+    logging:
+      driver: 'json-file'
+      options:
+        max-size: '50m'
+      
 volumes:
   database:
   pgadmin:
