--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
     "build": "rimraf dist && tsc --build",
     "start": "nodemon --exec 'yarn fix & ts-node' --files ./src/index.ts",
     "create-migration": "ts-node ../node_modules/typeorm/cli.js migration:generate -n ",
-    "migrate": "ts-node ./src/init.ts && ts-node ../node_modules/typeorm/cli.js migration:run",
-    "revert": "ts-node ../node_modules/typeorm/cli.js migration:revert",
+    "migrate": "node ./dist/src/init.js && node ../node_modules/typeorm/cli.js migration:run",
+    "revert": "node ./dist/src/init.js && node ../node_modules/typeorm/cli.js migration:revert",
     "lint": "eslint 'src/**/*.ts'",
     "fix": "eslint 'src/**/*.ts' --fix"
   },
