--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,12 +55,13 @@
     "react-ga": "^3.3.0",
     "react-giphy-searchbox": "^1.5.4",
     "react-helmet": "^6.1.0",
-    "react-markdown": "^5.0.3",
+    "react-markdown": "^6.0.3",
     "react-password-strength-bar": "^0.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-social-login-buttons": "^3.5.0",
     "recoil": "^0.4.0",
+    "rehype-raw": "^6.0.0",
     "shortid": "^2.2.16",
     "socket.io-client": "4.1.3",
     "source-map-explorer": "^2.5.2",
