--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,11 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.48",
+    "@mui/material": "^5.0.1",
+    "@mui/styled-engine-sc": "^5.0.0",
+    "@mui/styles": "^5.0.1",
     "@retrospected/common": "*",
     "@sentry/browser": "^6.13.2",
     "@stripe/react-stripe-js": "^1.5.0",
