--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "migrate": "cd backend && yarn migrate && cd ..",
     "stripe-login": "stripe login",
     "stripe-listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook",
-    "bump": "cd scripts && . ./bump.sh && cd .."
+    "bump": ". ./bump.sh"
   },
   "repository": {
     "type": "git",
