--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "license": "GNU GPLv3",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.35",
     "@material-ui/icons": "^4.11.2",
@@ -12,7 +14,6 @@
     "@mui/icons-material": "^5.0.1",
     "@mui/lab": "^5.0.0-alpha.48",
     "@mui/material": "^5.0.1",
-    "@mui/styled-engine-sc": "^5.0.0",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^4.0.0",
     "@retrospected/common": "*",
@@ -78,11 +79,8 @@
     "uuid": "^8.3.2",
     "whatwg-fetch": "^3.6.2"
   },
-  "resolutions": {
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
-  },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "react-scripts start",
     "build": "NODE_ENV=production && react-scripts build",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "react-scripts test",
