--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,20 +6,15 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/data-grid": "^4.0.0-alpha.35",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.0.1",
-    "@mui/lab": "^5.0.0-alpha.48",
-    "@mui/material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.49",
+    "@mui/material": "^5.0.2",
     "@mui/styles": "^5.0.1",
-    "@mui/x-data-grid": "^4.0.0",
+    "@mui/x-data-grid": "^5.0.0-beta.2",
     "@retrospected/common": "*",
     "@sentry/browser": "^6.13.2",
     "@stripe/react-stripe-js": "^1.5.0",
-    "@stripe/stripe-js": "^1.18.0",
+    "@stripe/stripe-js": "^1.19.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.1",
     "@testing-library/react-hooks": "^7.0.2",
@@ -28,12 +23,12 @@
     "@types/lodash": "^4.14.175",
     "@types/md5": "^2.3.1",
     "@types/node": "^16.10.2",
-    "@types/react": "^17.0.25",
+    "@types/react": "^17.0.26",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-color": "^3.0.5",
     "@types/react-copy-to-clipboard": "^5.0.1",
     "@types/react-dom": "^17.0.9",
-    "@types/react-helmet": "^6.1.2",
+    "@types/react-helmet": "^6.1.3",
     "@types/react-router-dom": "^5.3.0",
     "@types/shortid": "^0.0.29",
     "@types/socket.io-client": "^1.4.36",
@@ -48,9 +43,8 @@
     "isemail": "^3.2.0",
     "lexorank": "^1.0.4",
     "lodash": "^4.17.21",
-    "material-ui-chip-input": "^1.1.0",
     "md5": "^2.3.0",
-    "notistack": "^1.0.10",
+    "notistack": "^2.0.2",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
